Update pull to refresh prompt to ensure correct text color in both light and dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2800,6 +2800,10 @@ bs-dropdown-container {
 
 }
 
+.ptr--text, .ptr--icon{
+  color: var(--text) !important;
+}
+
 .feed-post-icon-row__icon-repost-option-text {
   color: var(--text-muted);
   &:hover {
